--- a/src/App.scss
+++ b/src/App.scss
@@ -1,56 +1,171 @@
-* {
-  margin: 1px;
-  padding: 1px;
+// #region GLOBAL
+html {
+  scroll-behavior: smooth;
 }
 
 body {
-  font-family: "Titillium Web", serif;
-  background-color: #ffffff;
-  color: #000000;
-  margin: 0;
-  padding: 0;
+  background-color: #2a3828; //dark green color
+  color: #182017;
+  font-family: Helvetica, sans-serif;
+  margin: 1.25rem 1rem 0 1rem;
+  overflow-x: hidden;
 }
 
-h1,
-h2,
-h3 {
-  color: inherit;
+#globalNav {
+  margin: 0 auto;
+  padding: 1rem 0;
+  background: #eeeeee70;
+  position: sticky;
+  top: 1rem; // Får navigationen til at blive sticky i toppen af skærmen
+  width: 100%; // Sørg for at den strækker sig horisontalt
+  z-index: 1000; // Sørger for at den ligger ovenpå andre elementer
+  display: flex;
+  justify-content: center;
+
+  ul {
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+
+    li {
+      font-size: 1.5rem;
+      font-family: Arial, sans-serif;
+
+      a {
+        text-decoration: none;
+        color: black;
+        padding: 10px 20px;
+        transition: color 0.3s ease-in-out;
+
+        &:hover {
+          color: red;
+        }
+      }
+    }
+  }
 }
 
-p,
-a {
-  color: inherit;
+// #endregion GLOBAL
+
+// #region HEADER
+#globalHeader {
+  position: relative;
+  width: 100%;
+  margin: 0 auto;
+  height: 100vh;
+  overflow-y: hidden;
+  margin-bottom: 2rem;
+  border: 2px solid #fdffc2;
+  box-sizing: border-box;
+
+  #HeaderImage {
+    width: 100%;
+    height: 110vh;
+    object-fit: cover;
+    /* Sørger for at billedet fylder hele containeren */
+  }
+
+  #absiluteText {
+    position: absolute;
+    padding: 3rem;
+    left: 0;
+    top: 0;
+    color: #2a3828;
+
+    #flex {
+      display: flex;
+
+      img {
+        opacity: .9;
+      }
+
+      h1 {
+        margin: auto 0 0 1rem;
+        text-transform: uppercase;
+        font-size: 6rem;
+        opacity: .5;
+      }
+    }
+
+    h2 {
+      font-size: 3rem;
+      margin: .5rem 0 0 0;
+      opacity: .5;
+      text-align: center;
+    }
+  }
 }
 
-button {
-  cursor: pointer;
-  padding: 10px 20px;
-  border: none;
+#globalMain {
+  border-top: #fdffc2 2px solid; //beige color
 }
 
-.button-container button {
-  background-color: #27402c;
-  color: #fff;
+// #endregion HEADER
+
+// #region MAIN
+#globalMain {
+  #MainHeader {
+    display: flex;
+    justify-content: space-between;
+    margin: .5rem 0;
+
+    h2 {
+      font-size: 3.5rem;
+      margin: 0;
+      color: #fdffc2;
+      text-transform: uppercase;
+      letter-spacing: 2px;
+    }
+
+    img {
+      width: auto;
+      height: 3.5rem;
+    }
+  }
+
+  #descriptionContainer {
+    border-top: 2px solid #fdffc2;
+    border-bottom: 2px solid #fdffc2;
+    padding: 2rem 0 2rem 0;
+    margin: 0 auto;
+
+    #borderRadiusContainer {
+      display: flex;
+      justify-content: space-between;
+      border-radius: 2rem;
+      overflow: hidden;
+
+      div {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        width: 100%;
+
+        #descriptionText {
+          margin: 0;
+          background-color: #273220;
+          padding: 2rem;
+          font-size: 1.8rem;
+          color: #fdffc2;
+          margin-right: 1rem;
+        }
+      }
+
+      #mainImageContainer {
+        width: 100%;
+        height: 100%;
+        margin-left: 1rem;
+
+        #mainImage {
+          width: 100%;
+          height: 100%;
+        }
+      }
+    }
+  }
 }
 
-.button-container button:hover {
-  background-color: #666;
-}
-
-
-
-.currentRoute {
-  color: #27402c;
-  transition: 200ms ease-in-out;
-  border: 2px solid #27402c;
-  width: fit-content;
-  margin: 0;
-  padding: 0 .5rem;
-  font-size: 1.4rem;
-}
-
-.currentRoute:hover {
-  letter-spacing: 2px;
-  border-right: 6px solid red;
-  border-bottom: 4px solid red;
-}
+// #endregion MAIN
